# try-marp-plantuml-mermaid

./: .pdm-python  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/builder/: README.md
.devcontainer/builder/lib/jinja2/: Dockerfile
.devcontainer/builder/scripts/: build.bash
lib/jinja2/: README.md
scripts/: build.bash  serve.bash
slides/ch2/: canister.iuml  canister.puml  ch2.md  git.md
src/ch2/: ch2-image-sequence.md  ch2.md  changes_diagram.iuml  changes_sequence.mmd  changes_sequence.puml  fork_clone._uml.j2  fork_clone.md.j2  fork_clone.puml.j2  fork_clone_diagram.iuml  fork_clone_diagram.jinja  fork_clone_diagrams.puml.j2  fork_clone_sequence.puml
src/tests/: test-marp.md  test-mermaid-in-plantuml.md  test-mermaid-in-plantuml.puml  test-mermaid.md  test-mermaid.mmd  test-plantuml.md  test-plantuml.puml
