[project]
name = "try-marp-plantuml-mermaid"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Stoney Jackson", email = "dr.stoney@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "jinja2-cli>=0.8.2",
]
